css/style.css
/* tooltip arrows from: http://www.cssarrowplease.com/ */

html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
    border: 0px none;
    margin: 0px;
    padding: 0px;
    vertical-align: baseline;
}

article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
    display: block;
}

body, html {
    color: #353535;
    font-family: "Lato", sans-serif;
    font-size: 16px;
    /*line-height: 16px;*/
    margin: 0px;
    padding: 0px;
    text-align: left;
}

.main {
    max-width: 1100px;
    margin: 0 auto;
    padding-top: 51px;
}

text,
input {
    font-family: "Lato", sans-serif;
}

*, *::before, *::after {
    box-sizing: border-box;
}

a {
    color:#1696d2;
    text-decoration: none;
    cursor: pointer;
}

a:hover {
    color: #000;
    text-decoration: none;
}

p {
    margin-bottom: 24px;
    line-height: 1.56;
    /*max-width: 726px;*/
}

h1 {
    font-size: 40px;
    font-weight: bold;
    margin-top: 100px;
    text-align: center;
}

h2 {
    font-size: 20px;
    text-align: center;
    font-weight: normal;
    line-height: 40px;
    margin-bottom: 40px;
}

hr {
    border: 0.5px solid #d2d2d2;
}

.hidden {
    display: none;
}

.invisible {
    visibility: hidden;
}

@media screen and (max-width: 900px) {
    .main {
        padding-left: 20px;
        padding-right: 36px;
    }
}

/*********** STRUCTURE ***********/
.content {
    max-width: 726px;
    margin: 0 auto;
    /*padding: 0px 30px;*/

}

.date {
    text-align: center;
    font-size: 14px;
    padding: 20px 0 60px;
}

.afterScroll {
    padding-top: 100px;
}

@media screen and (max-width: 1099px) {
    .afterScroll {
        padding-top: 0;
    }
}


/********** SCROLLYTELLING STYLES ************/
#graphic {
    width: 100%;
    position: relative;
    /*padding-top: 51px;*/
}

#sections {
    position: relative;
    width: 100%;
    pointer-events: none;
    /*top: 0;*/
}

.step {
    margin-left: 720px;
    margin-bottom: 10vh;
    padding: 0;
    min-height: 80vh;
}

#vis {
    position: absolute;
    top: 0;
    height: calc(100vh - 50px);
    /*width: 626px;*/
    /*border: 1px solid #d2d2d2;*/
    /*background-color: #d2d2d2;*/
}

#vis.sticky {
    position: fixed;
    top: 51px;
}

#vis.stickToBottom {
    /*position: absolute;*/
    bottom: 0;
    top: auto;
}

#vis svg {
    /*top: 50%;*/
    /*position: relative;*/
    /*transform: translateY(-50%);*/
    /*border: 1px dashed #d2d2d2;*/
}

#visInnerDiv {
    position: absolute;
    top: 50%;
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
}

#chart {
    padding-right: 100px;
}

.personaTextHighlight {
    background-color: rgba(253, 191, 17, 0.7);
    padding: 1px 4px;
    border-radius: 4px;
}

.stipendTextHighlight {
    background-color: rgba(236, 0, 139, 0.3);
    padding: 1px 4px;
    border-radius: 4px;
}

@media screen and (max-width: 1099px) {
    #vis {
        width: 100%;
    }

    #visInnerDiv {
        left: 50%;
        transform: translate(-50%, -50%);
    }

    .step {
        margin: 0 auto;
        margin-bottom: 50vh;
        max-width: 500px;
    }

    .step:last-child {
        margin-bottom: 10vh;
    }

    .scrollyTextContainer {
        background: rgba(255, 255, 255, 0.9);
    }

    .step p {
        margin-bottom: 0;
        padding: 10px 20px;
    }
}


/********** NAV DOT STYLES ***************/
#navDots {
    width: 10px;
    position: fixed;
    right: 25px;
    top: 50%;
    transform: translateY(-50%);
}

.navDot {
    height: 10px;
    width: 10px;
    background-color: #c4c4c4;
    border-radius: 50%;
    display: inline-block;
    margin: 10px 0;
}

.navDot.is-selected {
    background-color: #353535;
}

@media screen and (max-width: 1099px) {
    #navDots {
        right: 14px;
    }
}


/********** CHART STYLES ***************/
.chartTitle {
    text-align: center;
    font-weight: bold;
    font-size: 22px;
    padding-top: 5px;
    height: 67px;
    max-width: 600px;
}

.student {
    fill: #1696d2;
    stroke: none;
    cursor: pointer;
}

.columnLabel {
    text-anchor: middle;
    font-size: 14px;
    font-weight: bold;
    fill: #000;
}

.catLabel {
    font-size: 14px;
    text-anchor: middle;
    alignment-baseline: middle;
    fill: #000;
}

.dotLabel {
    font-size: 13px;
    text-anchor: middle;
    alignment-baseline: middle;
    fill: #1696d2;
}

.dividerLine {
    stroke-width: 1px;
    stroke: #d2d2d2;
}

.noFreeCollege {
    fill: #9d9d9d;
}

.hasStipend {
    fill: #ec008b;
}

.highlighted1 {
    stroke: #fdbf11;
    stroke-width: 3px;
}

.highlighted2 {
    stroke: #000;
    stroke-width: 3px;
}

@media screen and (max-width: 1099px) {
    #chart {
        padding-right: 0;
    }

    .student {
        pointer-events: none;
    }
}


/********** LEGEND STYLES **************/
.legend {
    width: 100%;
    /*height: 30px;*/
    padding: 10px 20px;
}

.legend p {
    font-size: 14px;
    font-weight: bold;
    margin-bottom: 5px;
}

.legendEntry {
    display: inline-block;
    /*width: 49%;*/
    margin-right: 38px;
}

.legendText {
    font-family: Lato;
    font-size: 14px;
    font-weight: bold;
    line-height: 14px;
    float: left;
    display: inline-block;
    color: #000;
    /*width: calc(100% - 20px);*/
}

.legendSquare {
    /*display: inline-block;*/
    height: 0;
    width: 0;
    margin-right: 10px;
    float: left;
    border-width: 7px;
    border-style: solid;
    border-color: #fff;
    pointer-events: none;
}

.legendSquare.freeCollege {
    border-color: #1696d2;
}

.legendSquare.noFreeCollege {
    border-color: #9d9d9d;
}

.legendSquare.hasStipend {
    border-color: #ec008b;
}


/*********** PERSONA STYLES ***********/
.personaDiv {
    overflow-y: auto;
    margin-bottom: 40px;
}

.persona.image {
    display: inline-block;
    float: left;
    /*width: 71px;*/
    /*height: 108px;*/
    /*background-color: #d2d2d2;*/
}

.persona.image img {
    width: 95px;
}

.persona.bio {
    display: inline-block;
    float: left;
    width: calc(100% - 95px);
    padding-left: 10px;
}

.persona.bio p {
    margin-bottom: 0;
}

.persona.topRow {
    padding-top: 15px;
}

.personaDot {
    fill: #1696d2;
}

.personaDot.noFreeCollege {
    fill: #9d9d9d;
}
.persona.name {
    color: #000;
    font-size: 22px;
    font-weight: bold;
    display: inline-block;
    vertical-align: top;
    padding-left: 8px;
}


/*********** TOOLTIP STYLES ************/
.tooltip {
    background-color: #fff;
    border: 1px solid #d2d2d2;
    /*width: 228px;*/
    position: absolute;
    top: 0;
    left: 0;
    padding: 15px;
}

.tooltip .studentPic img {
    width: 150px;
    display: block;
    margin: 0 auto;
}

.tooltip .studentName {
    color: #000;
    font-weight: bold;
    font-size: 18px;
    margin: 5px 0;
}

.tooltip p {
    font-size: 14px;
    color: #000;
    margin-bottom: 5px;
}


/*********** FOOTER ************/

footer {
    width: 100%;
    padding-bottom: 25px;
}

footer h4 {
    font-size: 34px;
    font-weight: 300;
    margin: 100px 0 25px 0;
    text-transform: uppercase;
}

footer p {
    font-size: 16px;
    margin-bottom: 12px;
}

.credits {
    font-size: 14px;
    margin-top: 1em;
    margin-bottom: 16px;
}

.job {
    margin-bottom: 4px;
    margin-top: 12px;
    text-transform: uppercase;
    font-weight: bold;
}

.urbanStatement {
    font-style: italic;
    margin-bottom: 40px;
}

.githubLink {
    margin-top: 24px;
}

@media screen and (max-width: 1099px) {
    footer {
        padding-left: 20px;
        padding-right: 36px;
    }

    footer h4 {
        font-size: 26px;
    }

    .job {
        font-size: 15px;
    }
}

